--- a/Step.3_Data_Visualization.qmd
+++ b/Step.3_Data_Visualization.qmd
@@ -97,10 +97,7 @@ library(plotly)     # User interactive plots
 library(fields)     # Used for drawing heat maps
 
 set.seed(27)        # make random results reproducible
-
-WD <- getwd()
-setwd(WD)
-remove(WD)
+setwd("C:/Users/sangb/Desktop/School/Classes/STAT/STAT 410/Code")
 ```
 
 ## Data Import
@@ -130,7 +127,7 @@ floorErrorMap <- function(estXY, actualXY, trainPoints = NULL, AP = NULL){
   box()
   if ( !is.null(AP) ) points(AP, pch = 15)
   if ( !is.null(trainPoints) )
-    points(trainPoints, pch = 19, col="grey", cex = 0.6)
+  points(trainPoints, pch = 19, col="grey", cex = 0.6)
   
   points(x = actualXY[, 1], y = actualXY[, 2], 
          pch = 19, cex = 0.8 )
@@ -250,7 +247,7 @@ dev.off()
 ```
 
 ## RSSI Heatmap
-```{r Step_7.RSSI_heatMap_Plot}
+```{r}
 #View signal strength by location (pick an angle, say 0 degrees, and view a topographic heat map of signal strength)
 oneAPAngle <- subset(IPS_trainingData, MAC==AP_Loc[1, 1] & angle == 0)
 
@@ -266,7 +263,7 @@ points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
 
 #Wrap all this into a function so that you can draw heat map for any angle and Mac address
 surfaceSS <- function(d, m, a) {
-  oneAPAngle = subset(d, MAC == AP_Loc[1, m] & angle == a)
+  oneAPAngle = subset(d, MAC == AP_Loc[m, 1] & angle == a)
   smoothSS <- Tps(oneAPAngle[, c("posX", "posY")], oneAPAngle$avgSignal)
   vizSmooth <- predictSurface(smoothSS)
   plot.surface(vizSmooth, type = "C")
@@ -274,6 +271,17 @@ surfaceSS <- function(d, m, a) {
   points(IPS_testingData$posX, IPS_testingData$posY, pch=19, col="black", cex = 0.5)
   points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
 }
+
+surfaceSS_oneMac <- function(d, m) {
+  oneAPAngle = subset(d, MAC == AP_Loc[m, 1])
+  smoothSS <- Tps(oneAPAngle[, c("posX", "posY")], oneAPAngle$avgSignal)
+  vizSmooth <- predictSurface(smoothSS)
+  plot.surface(vizSmooth, type = "C")
+  points(oneAPAngle$posX, oneAPAngle$posY, pch=19, col="grey", cex = 0.5)
+  points(IPS_testingData$posX, IPS_testingData$posY, pch=19, col="black", cex = 0.5)
+  points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
+}
+
 
 #Tell R to plot matrix
 parCur <- par(mfrow=c(2,2), mar=rep(2,4))
@@ -317,6 +325,15 @@ mapply(surfaceSS,
 par(parCur)
 ```
 
+```{r}
+surfaceSS_oneMac(IPS_trainingData, 1)
+surfaceSS_oneMac(IPS_trainingData, 2)
+surfaceSS_oneMac(IPS_trainingData, 3)
+surfaceSS_oneMac(IPS_trainingData, 4)
+surfaceSS_oneMac(IPS_trainingData, 5)
+surfaceSS_oneMac(IPS_trainingData, 6)
+```
+
 ```{r warning=FALSE}
 fig <- plot_ly(data = IPS_trainingData, 
                x = ~posX, y = ~posY, 
@@ -344,3 +361,24 @@ fig <- plot_ly(data = IPS_trainingData,
 
 fig
 ```
+
+```{r}
+varList=c("posX", "posY")
+
+actualXY <- IPS_testingData[ , varList]
+
+estXYk1 <- as.data.frame(estXYk1)
+estXYk3 <- as.data.frame(estXYk3)
+estXYk5 <- as.data.frame(estXYk5)
+
+errorDist <- function(est_data, act_data){
+  dist=sqrt((act_data$posX-est_data$posX)^2+(act_data$posY-est_data$posY)^2)
+}
+
+dist <- errorDist(est_data = estXYk1, act_data = actualXY)
+
+sum(dist)/length(dist)
+median(dist)
+```
+
+
