--- a/Step.3_Data_Visualization.qmd
+++ b/Step.3_Data_Visualization.qmd
@@ -97,7 +97,10 @@ library(plotly)     # User interactive plots
 library(fields)     # Used for drawing heat maps
 
 set.seed(27)        # make random results reproducible
-setwd("C:/Users/sangb/Desktop/School/Classes/STAT/STAT 410/Code")
+
+WD <- getwd()
+setwd(WD)
+remove(WD)
 ```
 
 ## Data Import
@@ -261,71 +264,86 @@ points(oneAPAngle$posX, oneAPAngle$posY, pch=19, col="grey", cex = 0.5)
 points(IPS_testingData$posX, IPS_testingData$posY, pch=19, col="black", cex = 0.5)
 points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
 
-#Wrap all this into a function so that you can draw heat map for any angle and Mac address
-surfaceSS <- function(d, m, a) {
-  oneAPAngle = subset(d, MAC == AP_Loc[m, 1] & angle == a)
-  smoothSS <- Tps(oneAPAngle[, c("posX", "posY")], oneAPAngle$avgSignal)
-  vizSmooth <- predictSurface(smoothSS)
-  plot.surface(vizSmooth, type = "C")
-  points(oneAPAngle$posX, oneAPAngle$posY, pch=19, col="grey", cex = 0.5)
-  points(IPS_testingData$posX, IPS_testingData$posY, pch=19, col="black", cex = 0.5)
-  points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
-}
 
+#Wrap all this into a function so that you can draw heat map for Mac address
 surfaceSS_oneMac <- function(d, m) {
-  oneAPAngle = subset(d, MAC == AP_Loc[m, 1])
-  smoothSS <- Tps(oneAPAngle[, c("posX", "posY")], oneAPAngle$avgSignal)
+  oneAP = subset(d, MAC == AP_Loc[m, 1])
+  smoothSS <- Tps(oneAP[, c("posX", "posY")], oneAP$avgSignal)
   vizSmooth <- predictSurface(smoothSS)
-  plot.surface(vizSmooth, type = "C")
-  points(oneAPAngle$posX, oneAPAngle$posY, pch=19, col="grey", cex = 0.5)
+  plot.surface(vizSmooth, xlim=c(-1, 35), ylim=c(-3, 14.5))
+  points(oneAP$posX, oneAP$posY, pch=19, col="grey", cex = 0.5)
   points(IPS_testingData$posX, IPS_testingData$posY, pch=19, col="black", cex = 0.5)
-  points(AP_Loc$x, AP_Loc$y, pch=15, cex = 1)
+  points(AP_Loc$x[m], AP_Loc$y[m], pch=15, cex = 1)
+  segments(7.8, 2.3, 7.8, -3.4,
+           lwd = 1, col = "black")
+  segments(11.3,2.3, 11.3,-3.4, 
+           lwd = 1, col = "black")
+  segments(16.1,2.3, 16.1,-3.4,
+           lwd = 1, col = "black")
+  segments(19.8,2.3, 19.8,-3.4,
+           lwd = 1, col = "black")
+  segments(22.1,2.3, 22.1,-3.4,
+           lwd = 1, col = "black")
+  segments(24.4,2.3, 24.4,-3.4,
+           lwd = 1, col = "black")
+  segments(28,2.3, 28,-3.4,
+           lwd = 1, col = "black")
+  segments(30.3,2.3, 30.3,-3.4,
+           lwd = 1, col = "black")
+  segments(9,14.2, 9,9.7,
+           lwd = 1, col = "black")
+  segments(11.5,14.2, 11.5,9.7,
+           lwd = 1, col = "black")
+  segments(13.8,14.2, 13.8,9.7, 
+           lwd = 1, col = "black")
+  segments(16.2,14.2, 16.2,9.7,
+           lwd = 1, col = "black")
+  segments(13.8,14.2, 13.8,9.7, 
+           lwd = 1, col = "black")
+  segments(19.7,14.2, 19.7,9.7,
+           lwd = 1, col = "black")
+  segments(22.1,14.2, 22.1,9.7,
+           lwd = 1, col = "black")
+  segments(25.6,14.2, 25.6,9.7,
+           lwd = 1, col = "black")
+  segments(28.1,14.2, 28.1,9.7,
+           lwd = 1, col = "black")
+  segments(30.5,14.2, 30.5,9.7,
+           lwd = 1, col = "black")
+  segments(3,9.7, 33.8,9.7,
+           lwd = 1, col = "black")
+  segments(3,14.2, 33.8,14.2,
+           lwd = 1, col = "black")
+  segments(3,2.3, 33.8,2.3,
+           lwd = 1, col = "black")
+  segments(3,-3.4, 33.8,-3.4,
+           lwd = 1, col = "black")
+  segments(3,2.3, 3,-3.4,
+           lwd = 1, col = "black")
+  segments(3,9.7, 3,14.2,
+           lwd = 1, col = "black")
+  segments(33.8,-3.4, 33.8,14.2,
+           lwd = 1, col = "black")
+  polygon(x = c(3, 3, 7.9, 7.9),  
+        y = c(4, 6.4, 6.4, 4),    
+        border = "black",             
+        lwd = 1)                   
+  polygon(x = c(14, 14, 19.9, 19.9),  
+        y = c(4, 6.4, 6.4, 4),    
+        border = "black",             
+        lwd = 1)                   
+  polygon(x = c(27, 27, 31, 31),  
+        y = c(4, 6.4, 6.4, 4),    
+        border = "black",             
+        lwd = 1)                   
+  segments(-0.5,-1.2, -0.5,14.2,
+           lwd = 1, col = "black")
+  segments(-0.5,-1.2, 3, -1.2,
+           lwd = 1, col = "black")
+  segments(-0.5,14.2, 3,14.2,
+           lwd = 1, col = "black")
 }
 
-
-#Tell R to plot matrix
-parCur <- par(mfrow=c(2,2), mar=rep(2,4))
-#Call surfaceSS 4 times to draw 4 heatmaps
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=0)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=45)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=90)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=135)
-#Reset plotting parameters for future plots
-par(parCur)
-
-parCur <- par(mfrow=c(2,2), mar=rep(2,4))
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=180)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=225)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=270)
-mapply(surfaceSS, 
-       d=list(data=IPS_trainingData), 
-       m =1, 
-       a=315)
-par(parCur)
-```
-
-```{r}
 surfaceSS_oneMac(IPS_trainingData, 1)
 surfaceSS_oneMac(IPS_trainingData, 2)
 surfaceSS_oneMac(IPS_trainingData, 3)
